UI Bugs and Alignment Issues

--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -4863,6 +4863,9 @@ button {
     margin-right: auto;
     margin-left: auto;
   }
+  .searchelement-input {
+    width: 22.625rem;;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1239px) {
@@ -9407,6 +9410,11 @@ button {
 }
 .m-top-1 {
   margin-top: 1px;
+}
+
+.imQrcode {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .copyButton {
